--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>T12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <form class="search-form">
+      <input
+        type="text"
+        class="search-form-input"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="search-form-button">Search</button>
+    </form>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+    <ul class="gallery"></ul>
 
-    <load src="./partials/footer.html" />
+    <div class="btn-wrap">
+      <button class="load-more" style="display: none">Load more</button>
+      <span class="loader"></span>
+      <span class="loading-text" style="display: none"
+        >Loading images, please wait...</span
+      >
+    </div>
 
+    <script type="module" src="./js/pixabay-api.js"></script>
+    <script type="module" src="./js/render-functions.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
